Fix the spacing of the Navigation Bar

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 ul {
     display: flex;
     list-style: none;
-    gap: 16px;
+    gap: 30px;
 }
 
 a {
